// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background renders basic background 1`] = `
<div
  className="background"
>
  <div
    className="top"
  >
    <img
      className="logo"
      src="test-file-stub"
    />
    <span
      className="background-top-bar"
    />
  </div>
  <div
    className="children"
  />
</div>
`;

exports[`Background renders correctly 1`] = `
<div
  className="background"
>
  <div
    className="illustration"
  >
    <div
      className="top"
    >
      <img
        className="logo"
        src="test-file-stub"
      />
      <span
        className="background-top-bar"
      />
    </div>
    <div
      className="children"
    />
  </div>
</div>
`;
